# AccelerationCompensation_ArmedMobileRobot

./: README.md
movit_package/: .setup_assistant  CMakeLists.txt  package.xml
movit_package/config/: fake_controllers.yaml  gazebo_robot_model.urdf  joint_limits.yaml  kinematics.yaml  new_ros_controllers.yaml  ompl_planning.yaml  robot_model.srdf  simple_moveit_controllers.yaml  stomp_planning.yaml
movit_package/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  full_robot_arm_sim.launch  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  robot_model_simulation.launch  ros_controllers.launch  run_benchmark_ompl.launch  (+4 more)
robot_model/: package.xml
robot_model/config/: joint_names_robot_model.yaml  joint_trajectory_controller.yaml
robot_model/data/: README.md
robot_model/data/imu_data/: README.md
robot_model/launch/: arm_urdf.launch
robot_model/meshes/: Link1.STL  Link2.STL  Link3.STL  Link4.STL  Link5.STL  Link6_glass.STL  base_link.STL  link__leftRearWheel.STL  link__rightFrontWheel.STL  link__rightRearWheel.STL  link_leftFrontWheel.STL
robot_model/scripts/: acc_viewer.py  algorithm_ac.py  graphs_generator.py  imu_conversion.py  initial_pose_1.py  initial_pose_2.py  initialization.py  mobile_robot_trajectory.py  move_joints.py  orientation_planning.py  pose_glass.py  starter.py  tf_broadcaster_wheels.py
robot_model/urdf/: robot_model.xacro
robot_model/worlds/: my_world.world
