<package format="2">
  <name>robot_model</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for robot_model</p>
    <p>This package contains configuration data, 3D models and launch files
for robot_model robot</p>
  </description>
  <author>Marcel Colet Velasco</author>
  <maintainer email="marcel.colet@estudiantat.upc.edu" />
  <license>Apache License 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>
